SERVER-3528: memory footprint of JS context keeps increasing as it is used, delete every 100 use